fixed contact page socials spacing

--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ body {
     display: grid;
     align-items: center;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 .projects {
@@ -843,7 +844,6 @@ img {
 }
 
 .resume-container {
-    width: 100%;
     text-align: center;
     flex-direction: column;
     justify-content: center;
@@ -851,8 +851,8 @@ img {
     padding-bottom: 0;
     display: flex;
     position: relative;
-    border-bottom:#F58F7C
-
+    border-bottom:#F58F7C;
+    grid-column:span;
 }
 
 .link-box {
@@ -1407,14 +1407,14 @@ section {
     font-family: migra, sans-serif;
     color:#D6D6D6;
     margin-right:10%;
-    margin-bottom:3%;
+    margin-bottom:5%;
 }
 
 .contact-container2 {
     font-family: migra, sans-serif;
     color:#D6D6D6;
     margin-left: 10%;
-    margin-bottom:3%;
+    margin-bottom:5%;
 }
 
 .contact-title {
